# community-app

./: README.md  pyproject.toml
src/fastapi_project/: main.py
src/fastapi_project/controllers/: comment_controller.py  post_controller.py  user_controller.py
src/fastapi_project/models/: comment_model.py  post_model.py  user_model.py
src/fastapi_project/routers/: comment_router.py  post_router.py  user_router.py
src/fastapi_project/utils/: auth.py  password.py
